--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.29.0",
+    "stylelint": "^14.16.1",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
